--- a/french-soup/styles/style.css
+++ b/french-soup/styles/style.css
@@ -7,3 +7,12 @@ html {
   font-family: 'Open Sans', sans-serif;
   font-size: 18px
 }
+
+#main-photo{
+
+  background-image: url(../);
+  padding: 100px 100px 1000px 100px;
+  background-size: 100%;
+  text-align: center;
+}
+
